database user design is changed
